expense_tracker/microshift/expense-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-db
  namespace: expense
spec:
  selector: { app: expense-db }
  ports:
    - port: 5432
      targetPort: 5432
