expense_tracker/microshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker
spec:
  selector:
    app: expense-tracker
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
