expense_tracker/microshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: expense-tracker
spec:
  to:
    kind: Service
    name: expense-tracker
  port:
    targetPort: 8000
  tls:
    termination: edge
